--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Aprenda a criar uma presença profissional no Facebook e gere vendas consistentes com técnicas comprovadas
                 </p>
                 <div class="hero-image">
-                    <img src="https://i.ibb.co/BHGJ3F80/Capa-Facebook.png" alt="Capa-Facebook" class="product-image">
+                    <img src="https://i.ibb.co/fVC8fd9q/Capa-2.png" alt="Capa-2" class="product-image">
                 </div>
                 <button class="cta-button primary" onclick="scrollToPrice()">
                     🚀 Quero Começar Agora!
