--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <div class="hero-image">
                     <img src="https://i.ibb.co/xt3YDd1X/capa3.png" alt="Capa3" class="product-image">
                 </div>
-                <button class="cta-button primary" onclick="scrollToPrice()">
+                <a href="https://pay.hotmart.com/M63670565E" class="cta-button primary">
                     🚀 Quero Começar Agora!
-                </button>
+                </a>
                 <p class="urgency-text">⏰ Oferta por tempo limitado - Garante o preço promocional hoje!</p>
             </div>
         </div>
@@ -141,9 +141,9 @@
                         Um investimento baixo para um grande retorno. 
                         O valor de apenas uma refeição pode transformar completamente seu negócio!
                     </p>
-                    <button class="cta-button primary large">
+                    <a href="https://pay.hotmart.com/M63670565E" class="cta-button primary large">
                         💳 Garantir Minha Vaga Agora
-                    </button>
+                    </a>
                     <p class="security-text">🔒 Compra 100% segura e protegida</p>
                 </div>
             </div>
@@ -229,9 +229,9 @@
             <div class="final-cta-content">
                 <h2>Não Deixe Seus Concorrentes Saírem na Frente!</h2>
                 <p>Enquanto você pensa, eles estão vendendo. Garante sua vaga agora e comece a transformar seu negócio hoje mesmo.</p>
-                <button class="cta-button primary large">
+                <a href="https://pay.hotmart.com/M63670565E" class="cta-button primary large">
                     🎯 Sim, Quero Dominar o Facebook Agora!
-                </button>
+                </a>
                 <p class="final-urgency">⏰ Esta oferta pode sair do ar a qualquer momento!</p>
             </div>
         </div>
@@ -247,4 +247,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
