--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Aprenda a criar uma presença profissional no Facebook e gere vendas consistentes com técnicas comprovadas
                 </p>
                 <div class="hero-image">
-                    <img src="https://i.ibb.co/yctVRKzB/Capa4.png" alt="Capa4" class="product-image">
+                    <img src="https://i.ibb.co/xt3YDd1X/capa3.png" alt="capa3" class="product-image">
                 </div>
                 <a href="https://pay.hotmart.com/M63670565E" class="cta-button primary">
                     🚀 Quero Começar Agora!
